force-app/main/default/objects/Ocupacion__c/Ocupacion__c.object-meta.xml
<CustomObject>
    <description>ocupaciones</description>
    <label>Ocupacion</label>
    <nameField>
        <label>Nombre Ocupación</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ocupaciones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>