force-app/main/default/objects/Ocupacion__c/fields/Cdigo_Ocupacin__c.field-meta.xml
<CustomField>
    <fullName>Cdigo_Ocupacin__c</fullName>
    <label>Código Ocupación</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>