force-app/main/default/objects/Ocupacion__c/fields/CodigoOcupacion__c.field-meta.xml
<CustomField>
    <fullName>CodigoOcupacion__c</fullName>
    <label>CodigoOcupacion</label>
    <length>10</length>
    <type>Text</type>
</CustomField>