force-app/main/default/objects/Ocupacion__c/fields/Navega__c.field-meta.xml
<CustomField>
    <fullName>Navega__c</fullName>
    <label>navega</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>