force-app/main/default/objects/Ocupacion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Cdigo_Ocupacin__c</columns>
    <columns>Navega__c</columns>
    <columns>CodigoOcupacion__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>